# mcp-postgresql-server

./: .env.example  .gitignore  LICENSE  LOGGING.md  README.md  db_connection.py  db_discovery.py  execute_query.py  logging_config.py  mcp_postgresql_server.py  project_utils.py  pyproject.toml
